package ProcessRunner;

/**
 * Created by Virtuality.
 */
public interface InputSubscriber {

    void outputString(String s);

}
