package com_io;

public interface CommunicatorFactory {
}
