package com_io;

public interface DataReceiver {

    public void dataRecieved(int[] data, Direction direction);
}
