package com_io;

public enum Direction {
    Internal, External
}
