package core.action_strategies;

public interface ActionStrategy {
}
