package core.action_strategies;

public class EmgyStop implements ActionStrategy {
}
