package core.behaviour_states.states;

public interface BehaviourState {
}
